# LowTempOven

./: CMakeLists.txt  README.md
config/: config.json
src/: App.cpp  Command.hpp  Config.hpp  Controller.cpp  Controller.hpp  Message.cpp  Message.hpp  pwmtest.cpp  tempctrl.cpp  tempctrl2.cpp
src/worker/: max31855_worker.cpp  max31855_worker.hpp
